[tool.poetry]
name = "time-series-demand-forecasting"
version = "0.1.0"
description = ""
authors = ["takumiw <w.tak.1229@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.2"
scipy = "^1.4.1"
pandas = "^1.0.3"
matplotlib = "^3.2.1"
sklearn = "^0.0"
pydot = "^1.4.1"
keras = "^2.3.1"
tensorflow = "^2.1.0"
seaborn = "^0.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
