[tool.poetry]
name = "time-series-demand-forecasting"
version = "0.1.0"
description = ""
authors = ["takumiw <w.tak.1229@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.2"
scipy = "^1.4.1"
pandas = "^1.0.3"
matplotlib = "^3.2.1"
sklearn = "^0.0"
keras = "^2.3.1"
seaborn = "^0.10.0"
graphviz = "^0.13.2"
pydotplus = "^2.0.2"
jupyter = "^1.0.0"
tensorflow = "2.1.0"
tensorflow-estimator = "2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
